--- a/app/views/welcome/recommendations.html.erb
+++ b/app/views/welcome/recommendations.html.erb
@@ -1,100 +1,162 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-  </head>
-  <body>
+<head>
+  <meta charset="utf-8">
+  <title></title>
+</head>
+<body>
 
 
-    <div class="card-grid">
-      <div class="card-wrap">
-        <div class="card">
-          <div class="rec">
-            <p>
-              "I came to Essential Nutrition because I wanted to learn how to manage my diet
-              -- in order to achieve weight loss and control cholesterol. Before I met Kay,
-              I was always starving so I was always eating. Now, by eating more high soluble
-              fiber foods, I stay full and don’t experience the sugar highs and lows. I also learned
-              about Beano; don’t laugh too much here but one reason I avoided whole grains, beans and
-              legumes was that I couldn’t digest them! I am so far 15 lbs. thinner and tons happier. "
-              Linda, Chapel Hill
-            </p>
-          </div>
-        </div>
+  <div class="recommendations">
+
+
+    <div class="card">
+      <h4><b>"I came to Essential Nutrition because I wanted to learn how to manage my diet
+        -- in order to achieve weight loss and control cholesterol. Before I met Kay,
+        I was always starving so I was always eating. Now, by eating more high soluble
+        fiber foods, I stay full and don’t experience the sugar highs and lows. I also learned
+        about Beano; don’t laugh too much here but one reason I avoided whole grains, beans and
+        legumes was that I couldn’t digest them! I am so far 15 lbs. thinner and tons happier. "</b></h4>
+        <p>Linda, Chapel Hill</p>
+
+      </div>
+      <div class="card">
+        <h4><b>"Essential Nutrition has been an amazing source of support
+        and encouragement to me this year. I cannot tell you how very thankful I am for you. "</b></h4>
+        <p>Jennifer, Raleigh</p>
+
+      </div>
+      <div class="card">
+        <h4><b>"I am so excited. I entered in the 130's today for the first time in years,
+        at least 5-6. I have been enjoying life, not emotional eating, feeling satisfied
+        with food, and active. Once I stopped worrying about food and let myself enjoy food
+        without diet-minded anxiety, I started dropping weight! "</b></h4>
+        <p>Katharine, Raleigh</p>
+
+      </div>
+      <div class="card">
+        <h4><b>"I appreciated the professional friendly approach in laying out a plausible working goal for me to incorporate in my
+        daily food intake. I enjoyed my session with her so much. Thank you! "</b></h4>
+        <p>Barbarra Pellizzori</p>
+
+      </div>
+      <div class="card">
+        <h4><b>"I was anorexic and at first used a nutritionist as a way to get my
+        doctors and mother off my case. Then I actually wanted to learn more
+        nutritionally so I could care for myself better. My nutritionist at
+        Essential Nutrition provided understanding, commitment, wisdom and companionship
+        along the rough road of recovery. "</b></h4>
+        <p>Liana, Chapel Hill</p>
+
       </div>
 
-      <div class="card-wrap">
-        <div class="card">
-          <div class="rec">
-            <p>
-              "Essential Nutrition has been an amazing source of support
-              and encouragement to me this year. I cannot tell you how very thankful I am for you. "    Jennifer, Raleigh
-            </p>
-          </div>
-        </div>
-      </div>
+      <div class="card">
+        <h4><b>"These are real people. They understand what you’re going through,
+        and have your best interests at heart. They are knowledgeable and kind,
+        offering equal parts empathy and information. It helps. It really does. "</b></h4>
+        <p>Sally, Chapel Hill</p>
 
-      <div class="card-wrap">
-        <div class="card">
-          <div class="rec">
-            <p>
-              "I am so excited. I entered in the 130's today for the first time in years,
-              at least 5-6. I have been enjoying life, not emotional eating, feeling satisfied
-              with food, and active. Once I stopped worrying about food and let myself enjoy food
-              without diet-minded anxiety, I started dropping weight! "    Katharine, Raleigh
-            </p>
-          </div>
-        </div>
       </div>
+      <div class="card">
+        <h4><b>"It was a good experience for my daughter. We were able to learn together
+        and feel united in a low-key environment. Meeting with a nutritionist at
+        your office helped my daughter understand how food works and not to be afraid of food. "</b></h4>
+        <p>Diana, Chapel Hill </p>
 
-      <div class="card-wrap">
-        <div class="card">
-          <div class="rec">
-            <p>
-              "I appreciated the professional friendly approach in laying out a plausible working goal for me to incorporate in my
-              daily food intake. I enjoyed my session with her so much. Thank you! "    Barbarra Pellizzori
-            </p>
-          </div>
-        </div>
       </div>
-
-      <div class="card-wrap">
-        <div class="card">
-          <div class="rec">
-            <p>
-              "I was anorexic and at first used a nutritionist as a way to get my
-              doctors and mother off my case. Then I actually wanted to learn more
-              nutritionally so I could care for myself better. My nutritionist at
-              Essential Nutrition provided understanding, commitment, wisdom and companionship
-              along the rough road of recovery. "    Liana, Chapel Hill
-            </p>
-          </div>
-        </div>
-      </div>
-      <div class="card-wrap">
-        <div class="card">
-          <div class="rec">
-            <p>
-              "These are real people. They understand what you’re going through,
-              and have your best interests at heart. They are knowledgeable and kind,
-              offering equal parts empathy and information. It helps. It really does. "    Sally, Chapel Hill
-            </p>
-          </div>
-        </div>
-      </div>
-      <div class="card-wrap">
-        <div class="card">
-          <div class="rec">
-            <p>
-              "It was a good experience for my daughter. We were able to learn together
-              and feel united in a low-key environment. Meeting with a nutritionist at
-              your office helped my daughter understand how food works and not to be afraid of food. "    Diana, Chapel Hill            </p>
-          </div>
-        </div>
-      </div>
+      <div class="card">
+        <h4><b>
+          "I am so excited. My cholesterol is down from 269 to 220 and my weight is down too. My doctor is planning to send you more patients! "
+        </b></h4>
+        <p>Lisa, Chapel Hill</p>
 
       </div>
     </div>
-  </body>
+
+
+
+
+
+    <!--
+
+    <div class="card-grid">
+    <div class="card-wrap">
+    <div class="card">
+    <div class="rec">
+
+</div>
+</div>
+</div>
+
+<div class="card-wrap">
+<div class="card">
+<div class="rec">
+<p>
+</p>
+</div>
+</div>
+</div>
+
+<div class="card-wrap">
+<div class="card">
+<div class="rec">
+<p>
+"I am so excited. I entered in the 130's today for the first time in years,
+at least 5-6. I have been enjoying life, not emotional eating, feeling satisfied
+with food, and active. Once I stopped worrying about food and let myself enjoy food
+without diet-minded anxiety, I started dropping weight! "    Katharine, Raleigh
+</p>
+</div>
+</div>
+</div>
+
+<div class="card-wrap">
+<div class="card">
+<div class="rec">
+<p>
+"I appreciated the professional friendly approach in laying out a plausible working goal for me to incorporate in my
+daily food intake. I enjoyed my session with her so much. Thank you! "    Barbarra Pellizzori
+</p>
+</div>
+</div>
+</div>
+
+<div class="card-wrap">
+<div class="card">
+<div class="rec">
+<p>
+"I was anorexic and at first used a nutritionist as a way to get my
+doctors and mother off my case. Then I actually wanted to learn more
+nutritionally so I could care for myself better. My nutritionist at
+Essential Nutrition provided understanding, commitment, wisdom and companionship
+along the rough road of recovery. "    Liana, Chapel Hill
+</p>
+</div>
+</div>
+</div>
+<div class="card-wrap">
+<div class="card">
+<div class="rec">
+<p>
+"These are real people. They understand what you’re going through,
+and have your best interests at heart. They are knowledgeable and kind,
+offering equal parts empathy and information. It helps. It really does. "    Sally, Chapel Hill
+</p>
+</div>
+</div>
+</div>
+<div class="card-wrap">
+<div class="card">
+<div class="rec">
+<p>
+"It was a good experience for my daughter. We were able to learn together
+and feel united in a low-key environment. Meeting with a nutritionist at
+your office helped my daughter understand how food works and not to be afraid of food. "    Diana, Chapel Hill            </p>
+</div>
+</div>
+</div> -->
+
+<!-- </div> -->
+<!-- </div> -->
+</body>
 </html>
