--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,9 +18,9 @@
           <li><a href="services">Services</a></li>
           <li><a href="recommendations">Recommendations</a></li>
           <li><a href="contactus">Directione</a></li>
-          <li><a href="nutritiontips">Nutrtion Tips</a></li>
-          <li><a href="recipes">Recipes</a></li>
-          <li><a href="wellnesscoaching">Wellness Coaching</a></li>
+          <li><a href="nutritiontips">Tips and Recipes!</a></li>
+          <!-- <li><a href="recipes">Recipes</a></li>
+          <li><a href="wellnesscoaching">Wellness Coaching</a></li> -->
         </ul>
       </nav>
     </header>
