--- a/app/views/welcome/nutritiontips.html.erb
+++ b/app/views/welcome/nutritiontips.html.erb
@@ -8,10 +8,79 @@
 <body>
 <div class="nutritiontips">
 
+  <div class="card-nutrition">
+    <img src="http://essentialnutrition.biz/images/dreamstimefree_organic_for_web.jpg" alt="Avatar" style="width:100%">
+    <div class="container-nutrition color-recipies">
+      <h4><b>Roasted Vegetables</b></h4>
+      <p>
+        Roasting vegetables can add unique flavors and aromas without a lot of extra
+        calories. Roasting will bring out a natural sweetness. Try these vegetables to roast
+        White Potatoes, Sweet Potatoes, Brussels Sprouts, Turnips, Winter Squash,
+        Eggplant, Onion, Garlic (once roasted it can be spread on bread instead of butter),
+        Carrots, Cauliflower (see recipe below).
+        Tips for roasting vegetables
+        Cut vegetables into slices, wedges or bite sized pieces. Place in a plastic
+        bag and add about 1-2 teaspoons of olive oil per cup of vegetable and shake
+        to coat. You can also add seasonings like rosemary, salt, or balsamic vinegar or Italian dressing.
+        Spray a baking sheet with cooking spray and add the vegetables in a single
+        layer. If you want to protect the pan you can add foil or designate one pan
+        for roasting vegetables and don't worry if it gets some brown areas.
+        Bake vegetables in a hot oven (400 degrees) until lightly browned and tender.
+        If they look like they are getting too dry add a little Italian dressing. Cook about 15-30 minutes, stir and cook another 15-30 minutes. Cooking times will very with the size of the vegetable.  A little parmesan cheese added during the last 10 minutes is a good touch especially on Brussels sprouts.
+      </p>
+    </div>
+  </div>
+
+
+
+  <div class="card-nutrition">
+    <img src="http://essentialnutrition.biz/images/dreamstimefree_organic_for_web.jpg" alt="Avatar" style="width:100%">
+    <div class="container-nutrition color-recipies">
+      <h4><b>Roasted Cauliflower</b></h4>
+      <p>
+        <li>1 head cauliflower, cut into small flowerets</li>
+        <li>2-3 cloves garlic, minced</li>
+        <li>1/2 lemon</li>
+        <li>Olive oil</li>
+        <li>Salt/Pepper</li>
+        <li>Parmesan Cheese</li>
+        In a plastic bag mix 2-3 teaspoons olive oil, juice of lemon,
+        garlic and a dash of salt and pepper. Add the cauliflower and coat. Empty
+        cauliflower on a baking sheet and bake at 400 degrees for about 20-25 minutes.
+        When browned and soft, sprinkle with a little parmesan and return to oven for about 5 minutes.
+      </p>
+    </div>
+  </div>
+
+  <div class="card-nutrition">
+    <img src="http://essentialnutrition.biz/images/dreamstimefree_organic_for_web.jpg" alt="Avatar" style="width:100%">
+    <div class="container-nutrition color-wellness">
+      <h4><b>What is a Wellness Coach?</b></h4>
+      <p>
+        Coaching is an emerging profession that began about 25 years ago,
+        first in executive leadership, followed by life coaching. Coaching for
+        health and wellness started about ten years ago and it has been shown to
+        be an effective approach to helping people make and sustain improvements in their lives.
+        The relationship between a coach and client offers a profound level of
+        support, guidance, and encouragement to making changes, without being judgmental.
+        Coaches help their clients become clearer on where they are, where they want to go, and how to get there.
+        Coaches provide instruction and mentoring to their clients, and
+        help them set goals, define an action plan, and navigate the path until
+        they reach their goals. Coaches facilitate learning and help clients put the
+        learning into action. Wellness coaches work with people who want to make changes
+        in their lives regarding eating, exercise and stress and generally work with
+        people without mental health issues. Coaches focus on the present and help the
+        client move towards the future. Coaches do not diagnose and may recommend that
+        clients seek a psychologist or therapist for treatment, if appropriate.
+        Kay Schlegel-Pratt became a certified wellness coach in 2009 through Wellcoaches
+        Corporation.
+      </p>
+    </div>
+  </div>
 
   <div class="card-nutrition">
     <img src="http://essentialnutrition.biz/images/dreamstimefree_Sardines_for_web.jpg" alt="" style="width: 100%" />
-    <div class="container-nutrition">
+    <div class="container-nutrition color-nutrition">
       <p>
         Omega 3 Fatty Acids
         Yes, omega 3 fatty acids are the healthy fats and fish is great source
@@ -23,7 +92,7 @@
   </div>
   <div class="card-nutrition">
     <img src="http://essentialnutrition.biz/images/dreamstimefree_bean_for_web.jpg" alt="Avatar" style="width:100%">
-    <div class="container-nutrition">
+    <div class="container-nutrition color-nutrition">
       <p>
         Frugal and Healthy Eating
         Believe it or not, there are plenty of ways that you can eat healthy
@@ -34,7 +103,7 @@
   </div>
   <div class="card-nutrition">
     <img src="http://essentialnutrition.biz/images/dreamstimefree_organic_for_web.jpg" alt="Avatar" style="width:100%">
-    <div class="container-nutrition">
+    <div class="container-nutrition color-nutrition">
       <p>
         Organic Vs. Conventional Fruits and Vegetables
         Buying organic reduces pollution of the air, water and soil
@@ -44,6 +113,9 @@
       </p>
     </div>
   </div>
+
+
+
   </div>
 </body>
 </html>
