--- a/app/views/welcome/nutritiontips.html.erb
+++ b/app/views/welcome/nutritiontips.html.erb
@@ -9,7 +9,7 @@
 <div class="nutritiontips">
 
   <div class="card-nutrition">
-    <img src="http://essentialnutrition.biz/images/dreamstimefree_organic_for_web.jpg" alt="Avatar" style="width:100%">
+    <img src="http://my.loudclick.net/Sites/5732/WWW/assets/images/pasta/orzoroastveg3.jpg" alt="Avatar" style="width:100%">
     <div class="container-nutrition color-recipies">
       <h4><b>Roasted Vegetables</b></h4>
       <p>
@@ -34,7 +34,7 @@
 
 
   <div class="card-nutrition">
-    <img src="http://essentialnutrition.biz/images/dreamstimefree_organic_for_web.jpg" alt="Avatar" style="width:100%">
+    <img src="http://www.robertsinskey.com/system/images/290/large/Cauliflour.jpg?1379445781" alt="Avatar" style="width:100%">
     <div class="container-nutrition color-recipies">
       <h4><b>Roasted Cauliflower</b></h4>
       <p>
@@ -53,7 +53,7 @@
   </div>
 
   <div class="card-nutrition">
-    <img src="http://essentialnutrition.biz/images/dreamstimefree_organic_for_web.jpg" alt="Avatar" style="width:100%">
+    <img src="http://i.imgur.com/dWEUegy.jpg" alt="Avatar" style="width:100%">
     <div class="container-nutrition color-wellness">
       <h4><b>What is a Wellness Coach?</b></h4>
       <p>
