--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,3 +1,11 @@
+//map
+#map {
+  width: 100%;
+  height: 40%;
+}
+//end map
+
+
 /* Base Styles */
 // nav bar --------------           --------------------- nav bar
 body {
@@ -79,13 +87,18 @@ nav {
   transition: max-height 0.5s;
   li {
     display: inline-block;
-    padding: 30px 10px;
+    // padding: 30px 10px;
   }
   a {
-    padding: 5px;
+    display: inline-block;
+    padding: 30px 10px;
     text-transform: uppercase;
     font-size: .8em;
     letter-spacing: 1px;
+  }
+  a:hover {
+    background-color: #660033;
+    cursor: pointer;
   }
 }
 
