i give up images are hard

--- a/app/views/welcome/nutritiontips.html.erb
+++ b/app/views/welcome/nutritiontips.html.erb
@@ -79,7 +79,7 @@
   </div>
 
   <div class="card-nutrition">
-    <img src="http://essentialnutrition.biz/images/dreamstimefree_Sardines_for_web.jpg" alt="" style="width: 100%" />
+    <img src="https://berrybreeze.com/O2bb/wp-content/uploads/2013/08/benefits-of-omega-3-fatty-acids-salmon.jpg" alt="" style="width: 100%" />
     <div class="container-nutrition color-nutrition">
       <p>
         Omega 3 Fatty Acids
@@ -91,7 +91,7 @@
     </div>
   </div>
   <div class="card-nutrition">
-    <img src="http://essentialnutrition.biz/images/dreamstimefree_bean_for_web.jpg" alt="Avatar" style="width:100%">
+    <img src="https://blog.mint.com/wp-content/uploads/2013/01/5-Winter-Produce-Recipes-for-Fresh-and-Frugal-Eating-During-the-Long-Winter-Months.jpg" alt="Avatar" style="width:100%">
     <div class="container-nutrition color-nutrition">
       <p>
         Frugal and Healthy Eating
@@ -102,7 +102,7 @@
     </div>
   </div>
   <div class="card-nutrition">
-    <img src="http://essentialnutrition.biz/images/dreamstimefree_organic_for_web.jpg" alt="Avatar" style="width:100%">
+    <img src="http://media.treehugger.com/assets/images/2012/08/Ramon-Gonzalez-Tomatoes.jpg.650x0_q70_crop-smart.jpg" alt="Avatar" style="width:100%">
     <div class="container-nutrition color-nutrition">
       <p>
         Organic Vs. Conventional Fruits and Vegetables
