added circles and made them in the center for reals

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -181,9 +181,20 @@ nav {
 
 //about us      ---------------------------------------------------  about us
 .kays-img {
+  box-shadow: 7px 7px 5px -6px rgba(0,0,0,0.69);
+  border-radius: 50%;
   height: 300px;
-  padding-left: 3.5em;
-  padding-right: 3.5em;
+  display:block;
+  margin:auto;
+  margin-bottom: 1em;
+}
+
+.loris-img {
+  box-shadow: 7px 7px 5px -6px rgba(0,0,0,0.69);
+  border-radius: 50%;
+  display:block;
+  margin:auto;
+  margin-bottom: 1em;
 }
 .container
 {
