--- a/app/views/welcome/aboutus.html.erb
+++ b/app/views/welcome/aboutus.html.erb
@@ -8,7 +8,7 @@
 
   <div class="container">
     <div class="left-div left-text">
-      <img src="http://i.imgur.com/Xyat8pA.jpg" class="card-img kays-img"/>
+      <img src="http://i.imgur.com/Xyat8pA.jpg?1" class="card-img kays-img" height="300" width="300"/>
       Bachelor of Science Degree in Food Science and Nutrition from Colorado State University
       Master of Science Degree in Human Nutrition from The Ohio State University
       Kay is a Registered Dietitian, a Licensed Dietitian Nutritionist,
@@ -19,7 +19,7 @@
       premature babies, pediatrics and adolescents.
     </div>
     <div class="right-div right-text">
-      <img src="http://i.imgur.com/rnVZGwy.jpg" class="card-img" width="400"/>
+      <img src="http://i.imgur.com/rnVZGwy.jpg?1" class="card-img loris-img" height="300" width="300"/>
       Bachelor of Science Degree in Nutrition from Iowa State University
       Doctorate in Public Health Nutrition from University of North Carolina at Chapel Hill
       Susan is a Registered Dietitian and a Licensed Dietitian Nutritionist.
