geolocation is wokring and will show map and directions to a place

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -337,3 +337,17 @@ nav {
 }
 
 //nutritiontips end
+// MAP =====----------====================--------------========== MAP -----------
+
+.allmap {
+  width: 600px
+}
+#map {
+  width: 300px;
+  height: 400px;
+  float: left;
+}
+#panel {
+  width: 300px;
+  float: right;
+}
