--- a/app/views/welcome/contactus.html.erb
+++ b/app/views/welcome/contactus.html.erb
@@ -1,6 +1,47 @@
 <!DOCTYPE html>
 <html>
+<head>
+  <meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
+  <script type="text/javascript"
+  src="http://maps.google.com/maps/api/js?key=AIzaSyAJh1HtXl2x_IC54PoCH4qKYwhsxKNkAhs&sensor=false"></script>
+</head>
 <body>
+  <div class="allmap">
+    <div id="map"></div>
+    <div id="panel"></div>
+  </div>
 
-</body>
-</html>
+  <script type="text/javascript">
+
+  var directionsDisplay = new google.maps.DirectionsRenderer;
+  var directionsService = new google.maps.DirectionsService;
+
+  var map = new google.maps.Map(document.getElementById('map'), {
+    zoom:7,
+    mapTypeId: google.maps.MapTypeId.ROADMAP
+  });
+
+  directionsDisplay.setMap(map);
+  directionsDisplay.setPanel(document.getElementById('panel'));
+
+  if (navigator.geolocation) {
+    navigator.geolocation.getCurrentPosition(function(position) {
+      var pos = {
+        lat: position.coords.latitude,
+        lng: position.coords.longitude
+      };
+
+      var request = {
+        origin: {lat: pos.lat, lng: pos.lng},
+        destination: 'New York',
+        travelMode: google.maps.DirectionsTravelMode.DRIVING
+      };
+      directionsService.route(request, function(response, status) {
+        if (status == google.maps.DirectionsStatus.OK) {
+          directionsDisplay.setDirections(response);
+        }
+      });
+    })};
+    </script>
+  </body>
+  </html>
