everything is done just not the main page

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -339,9 +339,6 @@ nav {
 //nutritiontips end
 // MAP =====----------====================--------------========== MAP -----------
 
-// .allmap {
-//   width: 600px
-// }
 #map {
   width: 60vw;
   height: 87vh;
@@ -353,3 +350,4 @@ nav {
   height: 87vh;
   float: right;
 }
+//end map --------===================------------===============------------- end map
