--- a/app/views/welcome/aboutus.html.erb
+++ b/app/views/welcome/aboutus.html.erb
@@ -7,7 +7,7 @@
 <body>
 
   <div class="container">
-    <div class="left-div left-text">
+    <div class="left-div left-text opacity">
       <img src="http://i.imgur.com/Xyat8pA.jpg?1" class="card-img kays-img" height="300" width="300"/>
       Bachelor of Science Degree in Food Science and Nutrition from Colorado State University
       Master of Science Degree in Human Nutrition from The Ohio State University
@@ -18,7 +18,7 @@
       has worked in the area of home health, wellness and in academics. She has worked with adults,
       premature babies, pediatrics and adolescents.
     </div>
-    <div class="right-div right-text">
+    <div class="right-div right-text opacity">
       <img src="http://i.imgur.com/rnVZGwy.jpg?1" class="card-img loris-img" height="300" width="300"/>
       Bachelor of Science Degree in Nutrition from Iowa State University
       Doctorate in Public Health Nutrition from University of North Carolina at Chapel Hill
