--- a/app/views/welcome/nutritiontips.html.erb
+++ b/app/views/welcome/nutritiontips.html.erb
@@ -6,7 +6,7 @@
 
 </head>
 <body>
-<div class="nutritiontips">
+<div class="nutritiontips opacity">
 
   <div class="card-nutrition">
     <img src="http://my.loudclick.net/Sites/5732/WWW/assets/images/pasta/orzoroastveg3.jpg" alt="Avatar" style="width:100%">
