--- a/app/views/welcome/recommendations.html.erb
+++ b/app/views/welcome/recommendations.html.erb
@@ -5,7 +5,7 @@
   <title></title>
 </head>
 <body>
-  <div class="recommendations">
+  <div class="recommendations opacity">
     <div class="card">
       <h4><b>"I came to Essential Nutrition because I wanted to learn how to manage my diet
         -- in order to achieve weight loss and control cholesterol. Before I met Kay,
