--- a/app/views/welcome/services.html.erb
+++ b/app/views/welcome/services.html.erb
@@ -7,7 +7,7 @@
 <body>
 
   <div class="container">
-    <div class="left-div left-text services">
+    <div class="left-div left-text services opacity">
       <p>
         Essential Nutrition is a participating provider with the insurance
         companies listed below. We suggest you call your insurance company to
@@ -18,7 +18,7 @@
         <li>Coventry</li>
       </p>
     </div>
-    <div class="right-div right-text services">
+    <div class="right-div right-text services opacity">
       <p>
         Essential Nutrition works with adults, children, teens and families.
         We believe that food and eating are important parts of our lives and should
