--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -30,7 +30,11 @@
 
 @media screen and (max-width:500px){
   .background-img {
-    background-image: url("");
+    background-image: url("http://i.imgur.com/VehrOpQ.jpg");
+    background-attachment: fixed;
+    background-color:transparent;
+    width: auto;
+    height: auto;
   }
 .greenbox {
   margin: auto;
@@ -52,6 +56,7 @@
 
 /* Base Styles */
 // nav bar --------------           --------------------- nav bar
+
 body {
   padding: 0;
   margin: 0;
@@ -68,6 +73,7 @@ a {
   text-decoration: none;
   color: inherit;
 }
+
 
 /* Themes */
 
@@ -198,14 +204,13 @@ nav {
   }
   .nav-bar li {
     color: black;
-    padding: 30px 0px;
+    padding: 15px 0px;
   }
   .nav-bar a {
-    padding: 5px;
-  }
-  .nav-bar a:hover {
+    padding: 10px;
     background-color: #dedda1;
   }
+
   .container {
     margin-top: 1.25em;
   }
